--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-    "react-transition-group": "^4.4.5",
+    "react-spinners": "^0.13.8",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
